@@ -26,10 +26,10 @@ dependencies {
     implementation ('org.apache.commons:commons-dbcp2:2.13.0') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
-    implementation 'org.apache.logging.log4j:log4j-core:2.24.2'
-    implementation 'com.oracle.database.jdbc:ojdbc11:23.7.0.25.01'
-    implementation 'org.springframework:spring-jdbc:6.2.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.19.2'
+    implementation 'org.apache.logging.log4j:log4j-core:2.24.3'
+    implementation 'com.oracle.database.jdbc:ojdbc11:23.7.0.25.04'
+    implementation 'org.springframework:spring-jdbc:6.2.4'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
