@@ -1,3 +1,6 @@
+Aug 14, 2025
+  updated linkml_schema_nr to 2.13.0; genes: added gcrp_cross_reference_db
+
 Feb 25, 2025
   curation: mod_entity_id -> primary_external_id
   curation: added generation of agm-allele associations
